--- a/SimpleCleanup/app/src/main/res/values/colors.xml
+++ b/SimpleCleanup/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorNormalSnackbar">#424242</color>
+    <color name="colorError">#F4511E</color>
 </resources>
